[package]
name = "zero-copy"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "tapki_zero"
# "cdylib" is necessary to produce a shared library for Python to import from.
#
# Downstream Rust code (including code in `bin/`, `examples/`, and `tests/`) will not be able
# to `use string_sum;` unless the "rlib" or "lib" crate type is also included, e.g.:
# crate-type = ["cdylib", "rlib"]
crate-type = ["cdylib"]

[dependencies]
arrow2 = {git = "https://github.com/ritchie46/arrow2", branch="dev", default-features = false }
pyo3 = "*"
polars = {version="*", features=["serde"]}
polars-core = {version="*", features=["serde"]}
